# omni-claude

./: .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  app.py  chainlit_app.py  chainlit_poc.py  jobs.json  main.py  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json  zh-CN.json
.github/: pull_request_template.md
.github/workflows/: pr-description.yml
chroma/: chroma.sqlite3
data/raw/: docs.python-telegram-bot.org_en_v21.4_.json  multiple_urls.json
docs/: user-guide.md
docs/feature-scoping/: implement-chunking-az-19.md  implement-vector-storage-and-embedding-az-20.md  rag-pipeline-enhancements-az-23.md  re-factor-chunking-az-46.md
docs/feature-scoping/0-2-0/: chunking-improvements.md  evals-tbd.md  evals-wip.md  evals[blocked].md  telemetry-tbd.md  vector-storage-imp.md
docs/internal/: commit_strategy.md
feature_scoping/: implement-chunking-az-19.md  implement-vector-storage-and-embedding-az-20.md
scripts/: generate_structure.py  project_structure.txt
src/core/: component_initializer.py  handling_exc.py
src/crawling/: crawler.py  jobs.json
src/data/chunks/: cra_docs_en_20240912_082455-chunked.json  cra_docs_en_20240912_082455-incorrect-chunks.json  cra_docs_en_20240914_172207-chunked.json  cra_docs_en_20240914_172207-incorrect-chunks.json  cra_supabase_docs_2024-09-11 07:16:11.json  cra_supabase_docs_20240908_222145-chunked.json  cra_supabase_docs_20240908_223343-chunked.json  cra_supabase_docs_20240908_223343-incorrect-chunks.json  cra_supabase_docs_20240911_071307-chunked.json  cra_supabase_docs_20240911_071307-incorrect-chunks.json  cra_supabase_docs_20240911_071611-chunked.json  supabase_com_docs_guides_auth_20240916_235100-chunked.json
src/data/example/: example.html  example.md
src/data/md_example/: example.md
src/document_ingestion/: manage_jobs.py  retrieve_results.py  scraping.py  supabase_scraping.py
src/evaluation/: eval_dataset.json  eval_dataset.pkl  evaluation.py  ragas_playground.py
src/experimental/: llama_git.py
src/generation/: claude_assistant.py  query_generator.py  summary_manager.py  tool_definitions.py
src/processing/: chunking.py
src/ui/: chainlit_ui.py  terminal_ui.py
src/utils/: config.py  decorators.py  logger.py  output_formatter.py
src/vector_database/: chroma_db.py  test_chroma.py  test_query_chroma.py  test_vectordb.py  vector_db.py
src/vector_storage/: chroma.sqlite3  document_summaries.json  vector_db.py
tests/: test_app.py  test_chunking.py  test_claude_assistant.py  test_crawler.py  test_vector_db.py
vector_db_persist/: chroma.sqlite3
vector_db_persist/17e47054-1d2f-4426-bea3-4ff138234584/: index_metadata.pickle
vector_db_persist/515dba6a-f43d-4f1c-a334-0d4fbaa529c6/: index_metadata.pickle
(+126 files in other folders)
