[tool.poetry]
name = "rag-doc"
version = "0.1.0"
description = ""
authors = ["AZ <azuev@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.34.1"
openai = "^1.42.0"
firecrawl-py = "^0.0.20"
chromadb = "^0.5.5"
colorama = "^0.4.6"
requests = "^2.32.3"
tiktoken = "^0.7.0"
markdown = "^3.7"
llama-index = "^0.11.2"
mistune = "^3.0.2"
langchain = "^0.2.15"
langchain-text-splitters = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
