[tool.poetry]
name = "rag-doc"
version = "0.1.0"
description = ""
authors = ["AZ <azuev@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.34.1"
openai = "^1.42.0"
colorama = "^0.4.6"
requests = "^2.32.3"
tiktoken = "^0.7.0"
markdown = "^3.7"
mistune = "^3.0.2"
langchain = "^0.2.15"
langchain-text-splitters = "^0.2.2"
google-cloud-aiplatform = "^1.64.0"
llama-index = "^0.11.3"
chromadb = "^0.5.5"
protobuf = "3.20.3"
cohere = "^5.9.0"
firecrawl-py = "^1.2.3"
pydantic = "^2.9.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
